--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Kelompok</string>
+    <string name="traveling">Traveling</string>
+    <string name="ride">Ride</string>
+    <string name="flight">Flight</string>
 </resources>
